--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ h2 {
 }
 
 .formulario button {
-    background-color: #CB6D43;
+    background-color: #5cfa0d;
     border: none;
     font-weight: bold;
 }
