--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/4965007.jpg');
+    background-image: url('img/c2a3a91ab989e25e04ed23fa04603099.jpg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
