--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ section {
 
 .nav-link {
     color: #34f94b;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .inicio-fundo {
@@ -72,9 +72,7 @@ section {
 .display-4 {
     text-shadow: -5px 5px var(--laranja-claro);
 }
-
-
-#tropicalia {
+#sedentarismo{ 
     position: relative;
     padding-top: 5rem;
     margin-top: 3rem;
@@ -85,7 +83,7 @@ section {
     /* Ajuste o tamanho conforme necessário */
 }
 
-#tropicalia .container {
+#sedentarismo .container {
     display: flex;
     align-items: center;
     justify-content: center;
