--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ h2 {
     color: var(--alto-contraste-fundo)
 }
 
-.alto-contraste #tropicalia {
+.alto-contraste #Sedentarismo {
     background: none;
 }
 
